changed header image

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: "https://johnnydastorm.github.io"
 
 # Secondary Parameters
 baseurl: "/project-pages"
-header-img: img/home-bg.jpg
+header-img: img/peppermint-1050x591.jpg
 headercolor: "#FFFFFF"
 logo: /project-pages/img/logos/Project-Pages-New-Logo-Inverted.png
 
